--- a/views/views.xml
+++ b/views/views.xml
@@ -56,7 +56,9 @@
                    <field name="jumpseller_product_id"/>  
                   <field name="jumpseller_categ"/>   
                   <field name="jumpseller_img" widget="url"/>   
-                               
+                  <field name="jumpseller_marca"/>   
+                  <field name="jumpseller_es_variante"/>   
+                  <field name="jumpseller_variente_id"/>                                                                              
                 </group>
               </group>
           </page>
