--- a/views/views.xml
+++ b/views/views.xml
@@ -1,6 +1,25 @@
 <odoo>
   <data>
 
+  <!-- model.name inherit form view -->
+  <record id="method_conector_jumpseller.invoice_form" model="ir.ui.view">
+    <field name="name">method.conector.jumpseller.invoice.form</field>
+    <field name="model">account.invoice</field>
+    <field name="inherit_id" ref="account.invoice_form"/>
+    <field name="arch" type="xml">
+        <xpath expr="//page[@name='other_info']" position="after">
+          <page name="NotasVenta" string="Notas de Venta">
+              <group>
+                <group name="SO" string="Notas de Venta">
+                  <field name="ordenes_ids" widget="many2many_tags"/>
+                </group>
+              </group>
+          </page>
+        </xpath>
+      
+    </field>
+  </record>
+
   <!-- Your Action Window Definition -->
   <record id="method_conector_jumpseller_metodopago_action" model="ir.actions.act_window">
       <field name="name">method.conector.jumpseller.metodopago.action</field>
