Agregar a la configuración de la empresa la lista de precios

--- a/views/views.xml
+++ b/views/views.xml
@@ -163,6 +163,7 @@
                     <group name="jumpseller_location" string="Ubicacion Stock"> 
                       <field name="jumpseller_location_id"/>
                       <field name="facturacion"/>
+                      <field name="lista_precio_id"/>
                       
                     </group>
 
